syntax = "proto3";
package pbserver;
option go_package = "./pbserver";

// 装备数据
message DBEquipOne
{
    int64 EquipID = 1;
}
message DBPlayerEquip
{
    map<int64, DBEquipOne> EquipList = 1;
}

// 角色额外数据
message DBRoleScopeUid
{
    int64 Idx = 1;
    map<int64, int64> UidPool = 2;
}
message DBRoleExtraData
{
    DBRoleScopeUid ScopeUid = 1;
}

// 货币数据
message DBRoleCoin
{
    map<int32, int64> CoinList = 1; // 货币列表 key:货币id value:货币数量
}

// 背包数据
message DBBagPos
{
    int32 PosID = 1;
    int32 GoodsType = 2;
    int32 ExcelID = 3;
    int64 Num = 4;
    int64 AttachID = 5;
}

message DBGoodsBag
{
    int32 BagType = 1; // 背包类型
	int32 PosIdx = 2;  // 格子生成索引
	map<int32, DBBagPos> PosList = 3; // 背包格子列表
}

message DBBagList
{
    repeated DBGoodsBag BagList = 1;    // 背包列表
}